--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "@webpack-cli/init": "^0.1.5",
+    "firebase": "^5.9.3",
+    "vue": "^2.5.11",
+    "vuefire": "^1.4.5"
   },
   "browserslist": [
     "> 1%",
@@ -20,14 +23,18 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^2.1.1",
     "file-loader": "^1.1.4",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
+    "webpack": "^3.12.0",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
   }
 }
